--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: c
 os: linux
 compiler: gcc
+install : make
 script :
-    - make
     - ./eval_expr "1 + 1"
     - ./eval_expr "545 * 43"
     - ./eval_expr "42 % 2"
