--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: c
 os: linux
 compiler: gcc
+before_install:
+    - cd lib/my
+    - make
 install : make
 script :
     - ./eval_expr "1 + 1"
