--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 language: c
 os: linux
 compiler: gcc
-before_install:
-    - cd lib/my
-    - make
-    - cd ../../
 install : make
 script :
     - ./eval_expr "1 + 1"
@@ -12,3 +8,5 @@ script :
     - ./eval_expr "42 % 2"
     - ./eval_expr "(4 * 6) + (43 * 4) / ((34 + 4) * 6) % 2"
     - ./eval_expr "ER5 + 3"
+after_failure: make clean
+after_success: make clean
